Be able to open emails and read them

--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -19,6 +19,8 @@
   script(src="/javascripts/bbclonemail/apps/selector/selector_app.js")
   script(src="/javascripts/bbclonemail/apps/mail/list/list_controller.js")
   script(src="/javascripts/bbclonemail/apps/mail/list/list_view.js")
+  script(src="/javascripts/bbclonemail/apps/mail/show/show_controller.js")
+  script(src="/javascripts/bbclonemail/apps/mail/show/show_view.js")
   script(src="/javascripts/bbclonemail/apps/mail/mail_app.js")
   script(src="/javascripts/bbclonemail/apps/contacts/contacts_app.js")
 - } else {
