--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -14,9 +14,13 @@
 
   script(src="/javascripts/bbclonemail/bbclonemail.js")
   script(src="/javascripts/bbclonemail/entities/mail.js")
+  script(src="/javascripts/bbclonemail/entities/category.js")
   script(src="/javascriptS/bbclonemail/apps/selector/show/show_controller.js")
   script(src="/javascriptS/bbclonemail/apps/selector/show/show_view.js")
   script(src="/javascripts/bbclonemail/apps/selector/selector_app.js")
+  script(src="/javascripts/bbclonemail/apps/mail/category/list/list_controller.js")
+  script(src="/javascripts/bbclonemail/apps/mail/category/list/list_view.js")
+  script(src="/javascripts/bbclonemail/apps/mail/category/category_app.js")
   script(src="/javascripts/bbclonemail/apps/mail/list/list_controller.js")
   script(src="/javascripts/bbclonemail/apps/mail/list/list_view.js")
   script(src="/javascripts/bbclonemail/apps/mail/show/show_controller.js")
