Added _base entities.

--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -13,6 +13,8 @@
   script(src="/javascripts/vendor/backbone.marionette.js")
 
   script(src="/javascripts/bbclonemail/bbclonemail.js")
+  script(src="/javascripts/bbclonemail/entities/_base/models.js")
+  script(src="/javascripts/bbclonemail/entities/_base/collections.js")
   script(src="/javascripts/bbclonemail/entities/mail.js")
   script(src="/javascripts/bbclonemail/entities/category.js")
   script(src="/javascripts/bbclonemail/entities/contact.js")
